--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "babel-preset-latest": "^6.16.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.1",
+    "eslint": "^4.19.1",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^3.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
@@ -55,10 +58,12 @@
     "isparta": "^4.0.0",
     "mocha": "^3.2.0",
     "postcss-loader": "^1.2.0",
+    "prettier": "^1.13.0",
     "raw-loader": "^0.5.1",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
+    "typings": "^2.1.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.2"
