--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "bootstrap": "^3.3.7",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
+    "moment": "^2.22.1",
+    "ng-flat-datepicker": "^0.1.4",
     "ng-token-auth": "^0.0.29"
   },
   "devDependencies": {
