style: format all the files and involve lint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,6 @@
   "html.format.endWithNewline": true,
   "path-intellisense.mappings": {
     "images": "${workspaceRoot}/src/images"
-  }
+  },
+  "javascript.implicitProjectConfig.experimentalDecorators": true
 }
