--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,23 @@
 {
-  "extends": ["eslint:recommended", "angular"],
+  "extends": ["eslint:recommended"],
   "env": {
     "browser": true,
+    "commonjs": true,
     "node": true,
-    "jquery": true
+    "es6": true
   },
-  "globals": {
-    "DragPolar": true,
-    "Howl": true,
-    "arBrowserChecker": true,
-    "enableInlineVideo": true
+  "globals": {},
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
   "rules": {
     "no-console": 0,
+    "sourceType": "module",
 
     "angular/angularelement": false,
     "angular/timeout-service": false,
