--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "bbuddy client",
   "main": "index.js",
   "scripts": {
+    "format": "node_modules/.bin/prettier --write \"**/*.{js,scss,json,md}\"",
+    "lint": "node_modules/.bin/eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -41,6 +43,7 @@
     "autoprefixer": "^6.5.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.2",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^6.2.9",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.16.0",
